WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133722
[Cocoa] WKWebView’s canGoBack and canGoForward properties are not KVO-compliant
https://bugs.webkit.org/show_bug.cgi?id=133722
Summary
[Cocoa] WKWebView’s canGoBack and canGoForward properties are not KVO-compliant
mitz
Reported
2014-06-10 23:37:35 PDT
<
rdar://problem/17218629
>
Attachments
Make WKWebView KVO-compliant for canGoBack and canGoForward
(11.57 KB, patch)
2014-06-10 23:46 PDT
,
mitz
andersca
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2
(641.71 KB, application/zip)
2014-06-11 00:53 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-06-10 23:46:07 PDT
Created
attachment 232850
[details]
Make WKWebView KVO-compliant for canGoBack and canGoForward
Build Bot
Comment 2
2014-06-11 00:53:41 PDT
Comment on
attachment 232850
[details]
Make WKWebView KVO-compliant for canGoBack and canGoForward
Attachment 232850
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5274233647136768
New failing tests: media/W3C/audio/canPlayType/canPlayType_application_octet_stream_with_codecs_1.html
Build Bot
Comment 3
2014-06-11 00:53:43 PDT
Created
attachment 232851
[details]
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
mitz
Comment 4
2014-06-11 07:31:15 PDT
Fixed in <
http://trac.webkit.org/r169805
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug